Saudi Arabia Riyal support

--- a/famfamfam-flags.css
+++ b/famfamfam-flags.css
@@ -77,6 +77,7 @@
 .famfamfam-flag-scotland { background-position: -96px -55px; }
 .famfamfam-flag-sc { background-position: -96px -66px; }
 .famfamfam-flag-sb { background-position: -96px -77px; }
+.famfamfam-flag-sar,
 .famfamfam-flag-sa { background-position: 0 -88px; }
 .famfamfam-flag-rw { background-position: -16px -88px; }
 .famfamfam-flag-ru,
