--- a/famfamfam-flags.css
+++ b/famfamfam-flags.css
@@ -12,7 +12,7 @@
     height: 11px;
     line-height: 11px;
     /* vertical-align: text-top; */
-    background-image: url("famfamfam-flags.png") no-repeat 0 0;
+    background-image: url("famfamfam-flags.png") no-repeat 20px 0;
 }
 
 .famfamfam-flag-zw { background-position: 0 0; }
@@ -25,6 +25,7 @@
 .famfamfam-flag-wf { background-position: 0 -22px; }
 .famfamfam-flag-wales { background-position: -16px -22px; }
 .famfamfam-flag-vu { background-position: -32px -22px; }
+.famfamfam-flag-vnd,
 .famfamfam-flag-vn { background-position: 0 -33px; }
 .famfamfam-flag-vi { background-position: -16px -33px; }
 .famfamfam-flag-vg { background-position: -32px -33px; }
@@ -39,6 +40,7 @@
 .famfamfam-flag-ug { background-position: -32px -44px; }
 .famfamfam-flag-ua { background-position: -48px -44px; }
 .famfamfam-flag-tz { background-position: -64px 0; }
+.famfamfam-flag-twd,
 .famfamfam-flag-tw { background-position: -64px -11px; }
 .famfamfam-flag-tv { background-position: -64px -22px; }
 .famfamfam-flag-tt { background-position: -64px -33px; }
@@ -70,6 +72,7 @@
 .famfamfam-flag-sk { background-position: -80px -77px; }
 .famfamfam-flag-si { background-position: -96px 0; }
 .famfamfam-flag-sh { background-position: -96px -11px; }
+.famfamfam-flag-sgd,
 .famfamfam-flag-sg { background-position: -96px -22px; }
 .famfamfam-flag-se,
 .famfamfam-flag-chf { background-position: -96px -33px; }
@@ -98,6 +101,7 @@
 .famfamfam-flag-php { background-position: -112px -11px; }
 .famfamfam-flag-pg { background-position: -112px -22px; }
 .famfamfam-flag-pf { background-position: -112px -33px; }
+.famfamfam-flag-pen,
 .famfamfam-flag-pe { background-position: -112px -44px; }
 .famfamfam-flag-pa { background-position: -112px -55px; }
 .famfamfam-flag-om { background-position: -112px -66px; }
@@ -138,8 +142,10 @@
 .famfamfam-flag-me { background-position: 0 -132px; height: 12px; }
 .famfamfam-flag-md { background-position: -112px -121px; }
 .famfamfam-flag-mc { background-position: -128px -121px; }
+.famfamfam-flag-mad,
 .famfamfam-flag-ma { background-position: -16px -132px; }
 .famfamfam-flag-ly { background-position: -32px -132px; }
+.famfamfam-flag-lvl,
 .famfamfam-flag-lv { background-position: -48px -132px; }
 .famfamfam-flag-lu { background-position: -64px -132px; }
 .famfamfam-flag-lt { background-position: -80px -132px; }
@@ -149,6 +155,7 @@
 .famfamfam-flag-li { background-position: -144px 0; }
 .famfamfam-flag-lc { background-position: -144px -11px; }
 .famfamfam-flag-lb { background-position: -144px -22px; }
+.famfamfam-flag-lak,
 .famfamfam-flag-la { background-position: -144px -33px; }
 .famfamfam-flag-kz { background-position: -144px -44px; }
 .famfamfam-flag-ky { background-position: -144px -55px; }
@@ -170,6 +177,7 @@
 .famfamfam-flag-it { background-position: -96px -144px; }
 .famfamfam-flag-is { background-position: -112px -144px; }
 .famfamfam-flag-ir { background-position: -128px -144px; }
+.famfamfam-flag-iqd,
 .famfamfam-flag-iq { background-position: -144px -144px; }
 .famfamfam-flag-io { background-position: -160px 0; }
 .famfamfam-flag-in,
@@ -177,6 +185,7 @@
 .famfamfam-flag-im { background-position: -160px -22px; height: 9px; }
 .famfamfam-flag-il { background-position: -160px -31px; }
 .famfamfam-flag-ie { background-position: -160px -42px; }
+.famfamfam-flag-idr,
 .famfamfam-flag-id { background-position: -160px -53px; }
 .famfamfam-flag-hu { background-position: -160px -64px; }
 .famfamfam-flag-ht { background-position: -160px -75px; }
@@ -238,10 +247,12 @@
 .famfamfam-flag-cu { background-position: -64px -177px; }
 .famfamfam-flag-cs { background-position: -80px -177px; }
 .famfamfam-flag-cr { background-position: -96px -177px; }
+.famfamfam-flag-cop,
 .famfamfam-flag-co { background-position: -112px -177px; }
 .famfamfam-flag-cn,
 .famfamfam-flag-cny { background-position: -128px -177px; }
 .famfamfam-flag-cm { background-position: -144px -177px; }
+.famfamfam-flag-clp,
 .famfamfam-flag-cl { background-position: -160px -177px; }
 .famfamfam-flag-ck { background-position: -176px -177px; }
 .famfamfam-flag-ci { background-position: -192px 0; }
