Fixed Turkey reference

--- a/famfamfam-flags.css
+++ b/famfamfam-flags.css
@@ -45,7 +45,7 @@
 .famfamfam-flag-tv { background-position: -64px -22px; }
 .famfamfam-flag-tt { background-position: -64px -33px; }
 .famfamfam-flag-tr,
-.famfamfam-flag-trTy { background-position: -64px -44px; }
+.famfamfam-flag-try { background-position: -64px -44px; }
 .famfamfam-flag-to { background-position: 0 -55px; }
 .famfamfam-flag-tn { background-position: -16px -55px; }
 .famfamfam-flag-tm { background-position: -32px -55px; }
